upgrade logger for library